<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>

    <string name="connection_succeed" translatable="false">Connection succeed</string>
    <string name="error_authentication_canceled" translatable="false">Connection failed</string>
    <string name="error_no_internet" translatable="false">Network error</string>
    <string name="error_unknown_error" translatable="false">Unknown error</string>
    <!-- BOTTOM NAVIGATION BAR -->
    <string name="bottom_navigation_map">Map View</string>
    <string name="bottom_navigation_list">List View</string>
    <string name="bottom_navigation_workmates">Workmates</string>
    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">2129451590433265</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb2129451590433265</string>
    <!--TWITTER PURPOSE-->
    <string name="twitter_consumer_key" translatable="false">tBLWrzidToAUqS5TvaOXeDMjt</string>
    <string name="twitter_consumer_secret" translatable="false">doOpPukPMmE9uYMv3nQDevd4RoMe5f93CNZKDQDitC1HQzVmQZ</string>
    <!-- TOOLBAR-->
    <string name="title_map">I\'m Hungry!</string>
    <string-array name="toolbar_title_list">
        <item>I\'m Hungry!</item>
        <item>I\'m Hungry!</item>
        <item>Available workmates</item>
    </string-array>
    <!-- NavigationDrawer -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="navigation_drawer_menu_lunch">YOUR LUNCH</string>
    <string name="navigation_drawer_menu_settings">SETTINGS</string>
    <string name="navigation_drawer_menu_logout">LOGOUT</string>
    <string name="no_restaurant_chose_yet">You have to choose a restaurant first</string>
    <!-- Restaurant Profile-->
    <string name="call_button">CALL</string>
    <string name="like_button">LIKE</string>
    <string name="website_button">WEBSITE</string>
    <string name="no_restaurant_chose">No workmate come here!</string>
    <!-- Restaurant recyclerview-->
    <string name="closed_status">Closed</string>
    <string name="unknown_hours">Unknown Opening hours</string>
    <string name="closing_soon_status">Closing soon</string>
    <string name="open_status">Open until %s</string>
    <string name="always_open">Open 24/7</string>
    <string name="distance_unit_in_meter" translatable="false">%d m</string>
    <string name="distance_unit_in_kilometer" translatable="false">%d km</string>
    <string name="number_of_workmates" translatable="false">(%d)</string>
    <!-- Workmates recyclerview -->
    <string name="restaurant_chose_by_workmate">%s is eating to : %s</string>
    <string name="workmate_joining">%s is joining</string>
    <string name="workmate_no_choice_yet">%s hasn\'t decided yet</string>
    <!-- Google Maps-->
    <string name="user_position">You are here !</string>
    <!-- Settings Activity -->
    <string name="user_name">Your name</string>
    <string name="description_username_setting">Please provide your username</string>
    <string name="notification_activation">Notifications settings</string>
    <string name="description_notification_setting">This option if selected will allow the application to send you a notification to remind you where you will eat.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notification_activated" translatable="false">Notifications On</string>
    <string name="notification_deactivated" translatable="false">Notifications Off</string>
    <!-- Firebase -->
    <string name="info_no_email_found" translatable="false">No email found</string>
    <string name="info_no_username_found" translatable="false">No username found</string>
    <!-- Notifications -->
    <string name="notif_with_restaurant">It\'s time to eat : see your choice !</string>
    <string name="notif_without_restaurant">You\'ve not chosen any restaurant !</string>

</resources>
