<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controllers.Activities.RestaurantProfileActivity">

    <ImageView
        android:id="@+id/restaurant_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center_vertical"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/activity_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/stars1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_star_black_18"
                android:gravity="start"
                android:textColor="#000000"/>
            <ImageView
                android:id="@+id/stars2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_star_black_18"
                android:gravity="start"
                android:textColor="#000000"/>
            <ImageView
                android:id="@+id/stars3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_star_black_18"
                android:gravity="start"
                android:textColor="#000000"/>
        </LinearLayout>
        <TextView
            android:id="@+id/activity_restaurant_adress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12 rue du blabla"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">
        <Button
            android:id="@+id/activity_restaurant_phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/baseline_call_black_24"
            android:background="@color/fui_transparent"
            android:text="@string/call_button"/>
        <Button
            android:id="@+id/activity_restaurant_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/baseline_star_black_24"
            android:background="@color/fui_transparent"
            android:text="@string/like_button"/>
        <Button
            android:id="@+id/activity_restaurant_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/baseline_public_black_24"
            android:background="@color/fui_transparent"
            android:text="@string/website_button"
            android:onClick="onClick"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_restaurant_profile_workmates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>